# vexcoder

./: .gitignore  .mcp-probe  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  book.toml
.agents/: onboarding.md
.github/workflows/: arch-contracts.yml  autofix.yml  ci.yml  doc-ref-check.yml  docs-build-and-deploy.yml  release.yml  update-roadmaps.yml
TASKS/: ACTIVE-ROADMAP.md  ADR-013-tui-completion-deployment-plan.md  ADR-022-amendment-2026-03-03.md  ADR-022-free-open-coding-agent-roadmap.md  ADR-022-free-open-open-coding-agent-roadmap.md  ADR-023-deterministic-edit-loop.md  ADR-024-zero-licensing-cost-agent-parity-gaps.md  ADR-README.md  CORE-17-task-state-persistence.md  CORE-18-repo-navigation-operator-surface.md  CRIT-19-diff-native-write-flow.md  DOC-03-adr-022-migration-guide.md  FEAT-17-command-runner-core.md  FEAT-18-command-cancel-and-pty.md  FEAT-19-task-first-ui-shell.md  FEAT-20-changed-files-and-evidence-pane.md  PA-01-layered-config-resolution-chain.md  PJ-03-memory-notes-injection.md  PL-01-pre-post-tool-hooks.md  REF-09-model-backend-seam.md  TASKS-DISPATCH-MAP.md
TASKS/completed/: CORE-15-neutral-config-cutover.md  CORE-16-capability-approval-policy.md  REPO-RAW-URL-MAP.md  (+2 more)
docs/: book.toml
scripts/: agent_health_check.sh  check_forbidden_names.sh  check_no_alternate_routing.sh  checklist_status.sh  generate-docs.sh  lint_check.sh  publish_docs_site.sh  release.ps1  release.sh  taplo_safe.sh  update_active_roadmaps.py
src/: app.rs  config.rs  runtime.rs  tools.rs  util.rs
tests/: integration_test.rs  stream_parser_tests.rs
(+82 files in other folders)
