[package]
name = "vexcoder"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT"
autobins = false

[[bin]]
name = "vex"
path = "src/bin/vex.rs"

[dependencies]
aho-corasick = "1"
anyhow = "1"
bytes = "1"
crossterm = "0.28"
futures = "0.3"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"
unicode-width = "0.2"
portable-pty = "0.9"

[dev-dependencies]
tempfile = "3"
